feat(reconciliation): productionize ruleset-driven workflows and cleanup legacy POC paths
Consolidates reconciliation and rule-engine work from POC to production-ready structure with stronger service boundaries, UI updates, and documentation alignment.

What changed:

- Reworked reconciliation UI flows and navigation, including Generic Reconciliation and Rule Set management screens.

- Added debug screens/services and rule-engine service layer additions for better operability and diagnostics.

- Updated reconciliation, inventory, and JSON schema Groovy/service implementations; introduced generated-output cleanup services and refined schema save flow.

- Added reconciliation job/inventory seed data and new reconciliation rule-engine service definitions.

- Removed deprecated sample/POC assets and legacy rule workspace artifacts (screens, services, groovy samples, and obsolete docs).

- Refined entity definitions (Reconciliation/Rule) and removed unused Party entity extension.

- Expanded and reorganized documentation (code map, platform/services, technology notes, inventory retrieval, UI mockups, domain docs, theme library, rule-engine services).

- Replaced/updated skill guidance files (SKILL.md -> SKILLS.md) and refreshed AGENTS instructions.

Impact:

- Moves Darpan toward configurable, maintainable reconciliation execution with clearer operational/debug pathways.

- Cleans out sample-only logic and stale artifacts to reduce production risk and maintenance overhead.